<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/haveWF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/obtainWaterBottle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/haveWFRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/haveWF"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/haveWFYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" 
            android:onClick="yObtainWaterBottle"/>

        <RadioButton
            android:id="@+id/haveWFNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" 
            android:onClick="nObtainWaterBottle"/>
    </RadioGroup>

</RelativeLayout>