<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <Spinner
        android:id="@+id/waterLSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/waterL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/waterLSpinner"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/waterLooks"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/waterLCleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/waterLDirtyButton"
        android:layout_marginLeft="58dp"
        android:layout_toRightOf="@+id/waterLDirtyButton"
        android:src="@drawable/d_water_2" 
        android:contentDescription="@string/lt200nm"
        android:onClick="lt200nm"/>

    <ImageButton
        android:id="@+id/waterLDirtyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/waterL"
        android:layout_below="@+id/waterL"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/gt200nm"
        android:src="@drawable/d_water_1" 
        android:onClick="gt200nm"/>

</RelativeLayout>