<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/haveWFSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/haveWFRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/haveWF"
        android:layout_below="@+id/haveWF"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/haveWFYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" 
            android:onClick="yHaveWF"/>

        <RadioButton
            android:id="@+id/haveWFNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" 
            android:onClick="nHaveWF"/>
    </RadioGroup>

    <TextView
        android:id="@+id/haveWF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/haveWFSpinner"
        android:layout_below="@+id/haveWFSpinner"
        android:text="@string/haveWF"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>